# PATAS

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  EMULATION_SUMMARY.md  LICENSE  Makefile  README.md  SCALING_ANSWERS.md  alerts.yml  coverage.xml  docker-compose.monitoring.yml  docker-compose.prod.yml  emulation_report.md  emulation_scenarios.md  prometheus.yml  pyproject.toml  update_wiki.py
.github/: dependabot.yml
app/: README.md  audit.py  cache.py  chaos.py  cli.py  commercial_patterns.py  config.py  config_manager.py  config_schema.py  cost_guard.py  database.py  demo_routes.py  deps.py  distributed_lock.py  embedding_cache.py  graceful_degradation.py  health.py  idempotency.py  improved_sql_generator.py  latency_profiler.py  llm_cache.py  llm_rule_evolver.py  llm_rule_refiner.py  logging_config.py  main.py  metrics.py  ml_model.py  models.py  mq.py  observability.py  pattern_analyzer.py  pii_redaction.py  pipeline.py  preprocessing.py  regex_patterns.py  repositories.py  rule_export.py  schemas.py  secret_rotation.py  security.py  (+28 more)
examples/: README.md  USAGE_EXAMPLES.md  run_poc_example.sh  sample_telegram_logs.jsonl
integration/: README.md  __init__.py  cli.py  patas_core_client.py
knowledge/: index.md
legacy/: README.md  pattern_analyzer_v1.py  v2_routes_experimental.py
messenger_integration/: README.md  __init__.py  adapters.py  backends.py  cli.py
scripts/: README.md  analyze_csv_with_new_features.py  analyze_patterns.py  analyze_report_csv.py  analyze_rule_evolution.py  analyze_with_timing.py  auto_collect_data.py  auto_improve.py  auto_test_runner.py  backup_database.sh  benchmark_api.py  benchmark_two_stage.py  calibrate_threshold.py  check_api_status.sh  check_automation_status.py  check_db_schema.py  cleanup_retention.py  cleanup_zombie_patterns.py  client_validate.py  collect_training_data.py  corporate_stress_test.py  create_github_issues.sh  create_repos.sh  data_collection_daemon.py  demo_telegram.py  detailed_rule_analysis.md  evaluate_on_report_csv.py  evaluate_patterns_accuracy.py  evaluate_report_fast.py  evaluate_report_streaming.py  evaluate_rule_quality.py  explain_rule.py  export_openapi.py  export_training_data.py  find_optimal_threshold.py  find_optimal_threshold_fast.py  generate_honest_report.py  generate_large_test_dataset.py  generate_performance_report.py  generate_production_dataset.py  (+27 more)
static/: spam_dataset_1000.csv
(+139 files in other folders)
